src/generated/MiniRParser.py
# Generated from grammar/MiniR.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniRParser ( Parser ):

    grammarFileName = "MiniR.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'read'", "'dropna'", "'filter'", "'add'", 
                     "'select'", "'groupby'", "'summarize'", "'sort'", "'plot'", 
                     "'sum'", "'mean'", "'count'", "'max'", "'min'", "'asc'", 
                     "'desc'", "'true'", "'false'", "'and'", "'or'", "'not'", 
                     "'='", "':'", "';'", "','", "'('", "')'", "'{'", "'}'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'>='", "'<='", "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "READ", "DROPNA", "FILTER", "ADD", "SELECT", 
                      "GROUPBY", "SUMMARIZE", "SORT", "PLOT", "SUM", "MEAN", 
                      "COUNT", "MAX", "MIN", "ASC", "DESC", "TRUE", "FALSE", 
                      "AND", "OR", "NOT", "ASSIGN", "COLON", "SEMI", "COMMA", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "PLUS", "MINUS", 
                      "MULT", "DIV", "MOD", "EQ", "NEQ", "GTE", "LTE", "GT", 
                      "LT", "ID", "INT", "FLOAT", "STRING", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_loadStmt = 2
    RULE_assignStmt = 3
    RULE_transformStmt = 4
    RULE_transformOp = 5
    RULE_dropnaOp = 6
    RULE_filterOp = 7
    RULE_addOp = 8
    RULE_selectOp = 9
    RULE_groupbyOp = 10
    RULE_summarizeOp = 11
    RULE_summarizeItem = 12
    RULE_aggCall = 13
    RULE_aggFunc = 14
    RULE_sortOp = 15
    RULE_sortOrder = 16
    RULE_plotStmt = 17
    RULE_plotPropertyList = 18
    RULE_plotProperty = 19
    RULE_idList = 20
    RULE_exprList = 21
    RULE_expr = 22
    RULE_primary = 23

    ruleNames =  [ "program", "statement", "loadStmt", "assignStmt", "transformStmt", 
                   "transformOp", "dropnaOp", "filterOp", "addOp", "selectOp", 
                   "groupbyOp", "summarizeOp", "summarizeItem", "aggCall", 
                   "aggFunc", "sortOp", "sortOrder", "plotStmt", "plotPropertyList", 
                   "plotProperty", "idList", "exprList", "expr", "primary" ]

    EOF = Token.EOF
    READ=1
    DROPNA=2
    FILTER=3
    ADD=4
    SELECT=5
    GROUPBY=6
    SUMMARIZE=7
    SORT=8
    PLOT=9
    SUM=10
    MEAN=11
    COUNT=12
    MAX=13
    MIN=14
    ASC=15
    DESC=16
    TRUE=17
    FALSE=18
    AND=19
    OR=20
    NOT=21
    ASSIGN=22
    COLON=23
    SEMI=24
    COMMA=25
    LPAREN=26
    RPAREN=27
    LBRACE=28
    RBRACE=29
    PLUS=30
    MINUS=31
    MULT=32
    DIV=33
    MOD=34
    EQ=35
    NEQ=36
    GTE=37
    LTE=38
    GT=39
    LT=40
    ID=41
    INT=42
    FLOAT=43
    STRING=44
    WS=45
    LINE_COMMENT=46
    BLOCK_COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniRParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniRParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniRParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniRParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==41:
                self.state = 48
                self.statement()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(MiniRParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loadStmt(self):
            return self.getTypedRuleContext(MiniRParser.LoadStmtContext,0)


        def transformStmt(self):
            return self.getTypedRuleContext(MiniRParser.TransformStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(MiniRParser.AssignStmtContext,0)


        def plotStmt(self):
            return self.getTypedRuleContext(MiniRParser.PlotStmtContext,0)


        def getRuleIndex(self):
            return MiniRParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniRParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.loadStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.transformStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.assignStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.plotStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniRParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniRParser.ASSIGN, 0)

        def READ(self):
            return self.getToken(MiniRParser.READ, 0)

        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(MiniRParser.STRING, 0)

        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MiniRParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_loadStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoadStmt" ):
                return visitor.visitLoadStmt(self)
            else:
                return visitor.visitChildren(self)




    def loadStmt(self):

        localctx = MiniRParser.LoadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_loadStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(MiniRParser.ID)
            self.state = 63
            self.match(MiniRParser.ASSIGN)
            self.state = 64
            self.match(MiniRParser.READ)
            self.state = 65
            self.match(MiniRParser.LPAREN)
            self.state = 66
            self.match(MiniRParser.STRING)
            self.state = 67
            self.match(MiniRParser.RPAREN)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 68
                self.match(MiniRParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniRParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniRParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniRParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MiniRParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_assignStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignStmt(self):

        localctx = MiniRParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MiniRParser.ID)
            self.state = 72
            self.match(MiniRParser.ASSIGN)
            self.state = 73
            self.expr(0)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 74
                self.match(MiniRParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransformStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRParser.ID)
            else:
                return self.getToken(MiniRParser.ID, i)

        def ASSIGN(self):
            return self.getToken(MiniRParser.ASSIGN, 0)

        def COLON(self):
            return self.getToken(MiniRParser.COLON, 0)

        def transformOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRParser.TransformOpContext)
            else:
                return self.getTypedRuleContext(MiniRParser.TransformOpContext,i)


        def SEMI(self):
            return self.getToken(MiniRParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_transformStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransformStmt" ):
                return visitor.visitTransformStmt(self)
            else:
                return visitor.visitChildren(self)




    def transformStmt(self):

        localctx = MiniRParser.TransformStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_transformStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MiniRParser.ID)
            self.state = 78
            self.match(MiniRParser.ASSIGN)
            self.state = 79
            self.match(MiniRParser.ID)
            self.state = 80
            self.match(MiniRParser.COLON)
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.transformOp()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 508) != 0)):
                    break

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 86
                self.match(MiniRParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransformOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dropnaOp(self):
            return self.getTypedRuleContext(MiniRParser.DropnaOpContext,0)


        def filterOp(self):
            return self.getTypedRuleContext(MiniRParser.FilterOpContext,0)


        def addOp(self):
            return self.getTypedRuleContext(MiniRParser.AddOpContext,0)


        def selectOp(self):
            return self.getTypedRuleContext(MiniRParser.SelectOpContext,0)


        def groupbyOp(self):
            return self.getTypedRuleContext(MiniRParser.GroupbyOpContext,0)


        def summarizeOp(self):
            return self.getTypedRuleContext(MiniRParser.SummarizeOpContext,0)


        def sortOp(self):
            return self.getTypedRuleContext(MiniRParser.SortOpContext,0)


        def getRuleIndex(self):
            return MiniRParser.RULE_transformOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransformOp" ):
                return visitor.visitTransformOp(self)
            else:
                return visitor.visitChildren(self)




    def transformOp(self):

        localctx = MiniRParser.TransformOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_transformOp)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.dropnaOp()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.filterOp()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.addOp()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.selectOp()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.groupbyOp()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.summarizeOp()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                self.sortOp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropnaOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DROPNA(self):
            return self.getToken(MiniRParser.DROPNA, 0)

        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_dropnaOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropnaOp" ):
                return visitor.visitDropnaOp(self)
            else:
                return visitor.visitChildren(self)




    def dropnaOp(self):

        localctx = MiniRParser.DropnaOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dropnaOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MiniRParser.DROPNA)
            self.state = 99
            self.match(MiniRParser.LPAREN)
            self.state = 100
            self.match(MiniRParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILTER(self):
            return self.getToken(MiniRParser.FILTER, 0)

        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniRParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_filterOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterOp" ):
                return visitor.visitFilterOp(self)
            else:
                return visitor.visitChildren(self)




    def filterOp(self):

        localctx = MiniRParser.FilterOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_filterOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MiniRParser.FILTER)
            self.state = 103
            self.match(MiniRParser.LPAREN)
            self.state = 104
            self.expr(0)
            self.state = 105
            self.match(MiniRParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(MiniRParser.ADD, 0)

        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def ID(self):
            return self.getToken(MiniRParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniRParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniRParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_addOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddOp" ):
                return visitor.visitAddOp(self)
            else:
                return visitor.visitChildren(self)




    def addOp(self):

        localctx = MiniRParser.AddOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_addOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(MiniRParser.ADD)
            self.state = 108
            self.match(MiniRParser.LPAREN)
            self.state = 109
            self.match(MiniRParser.ID)
            self.state = 110
            self.match(MiniRParser.ASSIGN)
            self.state = 111
            self.expr(0)
            self.state = 112
            self.match(MiniRParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(MiniRParser.SELECT, 0)

        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def idList(self):
            return self.getTypedRuleContext(MiniRParser.IdListContext,0)


        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_selectOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectOp" ):
                return visitor.visitSelectOp(self)
            else:
                return visitor.visitChildren(self)




    def selectOp(self):

        localctx = MiniRParser.SelectOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_selectOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MiniRParser.SELECT)
            self.state = 115
            self.match(MiniRParser.LPAREN)
            self.state = 116
            self.idList()
            self.state = 117
            self.match(MiniRParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupbyOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUPBY(self):
            return self.getToken(MiniRParser.GROUPBY, 0)

        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def idList(self):
            return self.getTypedRuleContext(MiniRParser.IdListContext,0)


        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_groupbyOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupbyOp" ):
                return visitor.visitGroupbyOp(self)
            else:
                return visitor.visitChildren(self)




    def groupbyOp(self):

        localctx = MiniRParser.GroupbyOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_groupbyOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MiniRParser.GROUPBY)
            self.state = 120
            self.match(MiniRParser.LPAREN)
            self.state = 121
            self.idList()
            self.state = 122
            self.match(MiniRParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SummarizeOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUMMARIZE(self):
            return self.getToken(MiniRParser.SUMMARIZE, 0)

        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def summarizeItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRParser.SummarizeItemContext)
            else:
                return self.getTypedRuleContext(MiniRParser.SummarizeItemContext,i)


        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniRParser.COMMA)
            else:
                return self.getToken(MiniRParser.COMMA, i)

        def getRuleIndex(self):
            return MiniRParser.RULE_summarizeOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSummarizeOp" ):
                return visitor.visitSummarizeOp(self)
            else:
                return visitor.visitChildren(self)




    def summarizeOp(self):

        localctx = MiniRParser.SummarizeOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_summarizeOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MiniRParser.SUMMARIZE)
            self.state = 125
            self.match(MiniRParser.LPAREN)
            self.state = 126
            self.summarizeItem()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 127
                self.match(MiniRParser.COMMA)
                self.state = 128
                self.summarizeItem()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(MiniRParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SummarizeItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniRParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniRParser.ASSIGN, 0)

        def aggCall(self):
            return self.getTypedRuleContext(MiniRParser.AggCallContext,0)


        def getRuleIndex(self):
            return MiniRParser.RULE_summarizeItem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSummarizeItem" ):
                return visitor.visitSummarizeItem(self)
            else:
                return visitor.visitChildren(self)




    def summarizeItem(self):

        localctx = MiniRParser.SummarizeItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_summarizeItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MiniRParser.ID)
            self.state = 137
            self.match(MiniRParser.ASSIGN)
            self.state = 138
            self.aggCall()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AggCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggFunc(self):
            return self.getTypedRuleContext(MiniRParser.AggFuncContext,0)


        def LPAREN(self):
            return self.getToken(MiniRParser.LPAREN, 0)

        def ID(self):
            return self.getToken(MiniRParser.ID, 0)

        def RPAREN(self):
            return self.getToken(MiniRParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_aggCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggCall" ):
                return visitor.visitAggCall(self)
            else:
                return visitor.visitChildren(self)




    def aggCall(self):

        localctx = MiniRParser.AggCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_aggCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.aggFunc()
            self.state = 141
            self.match(MiniRParser.LPAREN)
            self.state = 142
            self.match(MiniRParser.ID)
            self.state = 143
            self.match(MiniRParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AggFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUM(self):
            return self.getToken(MiniRParser.SUM, 0)

        def MEAN(self):
            return self.getToken(MiniRParser.MEAN, 0)

        def COUNT(self):
            return self.getToken(MiniRParser.COUNT, 0)

        def MAX(self):
            return self.getToken(MiniRParser.MAX, 0)

        def MIN(self):
            return self.getToken(MiniRParser.MIN, 0)

        def getRuleIndex(self):
            return MiniRParser.RULE_aggFunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggFunc" ):
                return visitor.visitAggFunc(self)
            else:
                return visitor.visitChildren(self)




    def aggFunc(self):
